# geoasset-location

./: .env.defaults  .env.example  .env.secrets_defaults  .gitignore  DOCUMENT_PROCESSING_IMPLEMENTATION_PLAN.md  README.md  dev.docker-compose.yml  docker-compose.yml  run.sh
backend/: .gitignore  Dockerfile  dev.Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: agent.py  assets.py  companies.py  documents.py
backend/app/core/: config.py
backend/app/db/: models.py  session.py
backend/app/pipeline/: agent_orchestrator.py  doc_orchestrator.py  models.py  orchestrator.py
backend/app/pipeline/steps/: doc_step0_parse.py  doc_step1_chunk.py  doc_step2_extract.py  doc_step3_dedup.py  doc_step4_geocode.py  doc_step5_scoring.py  step0_identify.py  step1_maps.py  step2_llm_filter.py  step3_enrich.py  step4_scoring.py
backend/app/prompts/v1/: enrich_asset.yaml  extract_doc_assets.yaml  filter_assets.yaml  geocode_assets.yaml
backend/app/services/: agent_search.py  cache.py  document_parser.py  google_maps.py  llm_client.py
frontend/: .eslintrc.js  .gitignore  Dockerfile  bun.lockb  index.html  nginx.conf  package.json  tsconfig.json  vite.config.mts
frontend/src/: App.vue  components.d.ts  leaflet-markercluster.d.ts
frontend/src/components/: AgentDocumentReviewView.vue  AgentSearchView.vue  AssetMap.vue  AssetPopup.vue  AssetSidebar.vue  Header.vue  Main.vue  ProcessingView.vue  SearchBar.vue
frontend/src/plugins/: vuetify.ts
frontend/src/services/: backend.ts
frontend/src/stores/: store.ts
frontend/src/types/: types.ts
